# regex-fuzzy

./: .ghci  .gitignore  regex-fuzzy.cabal
bench/: Main.hs  lorem-ipsum.txt
src/Text/Regex/: Fuzzy.hs
src/Text/Regex/Fuzzy/: AST.hs  Dist.hs  Gen.hs  Parser.hs  Simpl.hs
tests/: properties.hs
