name:                  regex-fuzzy
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam T.
category:              Text
build-type:            Simple
cabal-version:         >= 1.8
homepage:              https://github.com/fmap/network-bittorrent
bug-reports:           https://github.com/fmap/network-bittorrent/issues
synopsis:              Regexp's with approximate string matching.
description:           Regexp's with approximate string matching.

source-repository head
  type:                git
  location:            https://github.com/fmap/regex-fuzzy.git

library
  exposed-modules:     Text.Regex.Fuzzy
                     , Text.Regex.Fuzzy.AST
                     , Text.Regex.Fuzzy.Parser
                     , Text.Regex.Fuzzy.Gen

  -- other-modules:

  build-depends:       base       == 4.5.*
                     , parsec     == 3.1.*
                     , text       == 0.11.*
                     , attoparsec == 0.10.*


  hs-source-dirs:      src
